# ripper

./: .envrc  .gitignore  README.md  README.rst  blah.csv  chunker.py  chunker_plus.py  config  config.sample  crp.sql  gen.py  get_access.py  get_audit.py  get_auth.py  get_db.py  get_ddl.py  get_ddl2.py  get_ddl3.py  get_ddl_each.py  get_each_schema.py  get_epochs.py  get_export.py  get_grants.py  get_locations.py  get_partial.py  get_pool_reset.py  get_pools.py  get_rejects.py  get_roles.py  get_schema.py  get_schemata.py  get_sequences.py  get_token.py  get_users.py  get_wipe.py  getter.py  go.sh  go_reject.sh  import_export.py  init_migration.py  (+42 more)
archive/: tevaQA12G_log.tar  tevaQA12G_scripts.tar
ddl/: def_gen_audit.py  migration_ddl.sql
dev/: 1v.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  blah.md  custom05.csv  elastic.rb  failed.sql  gen.py  get_epochs_01.sql  get_valids.py  getter.py  grants_10.sql  grants_11.sql  history.sql  initm.sql  insert into migration.source_schemas.sql  mgd.sql  odd_parms_03.sql  odd_parms_04.sql  odd_parms_05.sql  odd_parms_06.sql  odd_parms_07.sql  odd_parms_08.sql  owners.csv  pool2.sql  public.weighted_oracle_t.sql  short.sql  update_audit_rows.sql  users.sql
doc/: dev_actions.pages  developer_actions.md  features.md  get_grants.md  main.md  markd.md  next_steps.md  odd_objects.md  overall.md  pieces_parts.md  refresh_audit.md  report.html  ripper.md  runner.md  runners_guide.md  sql_query_types.md  teva_checklist.md  to_install.md  to_run.md  todo.md
ripper/: multi_multi.py  sql_runner.py
scripts/: Untitled-1.js  (+849 more)
(+69 files in other folders)
