[tool.poetry]
name = "ripper"
version = "0.1.0"
description = ""
authors = ["sixo <michael.bowen@full360.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.19.6"
vertica-python = "^1.1.1"
pytz = "2021.3"
torch = "1.10.0"
pandas = "1.3.4"
Pillow = "8.4.0"
torchvision = "0.11.1"
regex = "2021.11.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
